--- a/sass/blocks/_header.sass
+++ b/sass/blocks/_header.sass
@@ -1,63 +1,63 @@
-.container--header
+.container--navbar
   display: flex
   justify-content: space-between
-.header
-  font-family: Open Sans
-  padding-top: 37px
-  &__button
-    min-width: 148px
-    height: 48px
-    
-    font-style: normal
-    font-weight: bold
-    font-size: 16px
-    line-height: 22px
-    color: $primary
-    background-color: #fff
-    border: 2px solid $primary
-    border-radius: 8px
-    cursor: pointer
+  align-items: center
+  position: relative
+  
+  
 .logo
   width: 90px
+  height: 28px
 .navbar
-  &-wrapper
-    display: flex
-    gap: 47px
+  font-family: Open Sans
+  padding-top: 37px
   &-menu
+    margin: 0
     display: flex
+    align-items: center
+    &--wrapper
+      display: flex
+      gap: 60px
+    &__button
+      min-width: 148px
+      height: 48px
+      font-style: normal
+      font-weight: bold
+      font-size: 16px
+      line-height: 22px
+      color: $primary
+      background-color: #fff
+      border: 2px solid $primary
+      border-radius: 8px
+      cursor: pointer
     &__item
-      padding-left: 40px
+      padding-left: 25px
       list-style-type: none
+    &__link
+      text-decoration: none
       font-style: normal
       font-weight: 600
       font-size: 16px
       line-height: 22px
       color: $dark
         
-  
-  
 
 
-
-
-
-
-
-
-
-.menu
-  &-button
-    width: 24px
-    height: 24px
-    display: flex
-    align-items: center
-    flex-direction: column
-    border: none
-    background-color: #fff
-    cursor: pointer
-    justify-content: space-between
-    display: none
-    &__line 
-      width: 16px
-      height: 2px
-      background-color: #333
+.menu-button
+  position: absolute
+  right: 0
+  width: 22px
+  height: 18px
+  padding-right: 0
+  padding-left: 0
+  align-items: center
+  flex-direction: column
+  border: none
+  background-color: #fff
+  cursor: pointer
+  justify-content: space-between
+  display: none
+  &__line
+    width: 100%
+    height: 2px
+    background-color: #333
